--- a/app/src/main/res/layout/item_loading_layout.xml
+++ b/app/src/main/res/layout/item_loading_layout.xml
@@ -24,6 +24,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="视频地址解析中..."
-        android:textColor="@color/common_always_white_text_color" />
+        android:text=""
+        android:textColor="@android:color/white"
+         />
 </LinearLayout>
