--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="black">#000000</color>
     <color name="lightBlack">#272822</color>
+    <color name="lightBlacks">#515151</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="yeloo">#ffba00</color>
