--- a/app/src/main/res/layout/activity_act_take_photo.xml
+++ b/app/src/main/res/layout/activity_act_take_photo.xml
@@ -7,53 +7,13 @@
     android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.takephoto.ActTakePhoto">
-
-    <FrameLayout
+    <com.zph.lib.camearlibrary.ZPHCameraView
+        android:id="@+id/act_take_photo_zphcamearview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="27">
+        android:layout_height="match_parent"
+        app:duration_max="10000"
+        app:iconMargin="20dp"
+        app:iconSize="30dp"
+        app:iconSrc="@drawable/ic_camera_enhance_black_24dp"/>
 
-        <FrameLayout
-            android:id="@+id/act_take_photo_camear_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </FrameLayout>
-        <LinearLayout
-            android:id="@+id/act_take_photo_effect_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:minHeight="@dimen/x36"
-            android:orientation="vertical">
-
-        </LinearLayout>
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/act_take_photo_bottom_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/x36"
-            android:background="@color/black">
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/white" />
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/black">
-
-        </RelativeLayout>
-
-    </LinearLayout>
 </LinearLayout>
