--- a/app/src/main/res/layout/activity_act_video_clip.xml
+++ b/app/src/main/res/layout/activity_act_video_clip.xml
@@ -4,10 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
-    tools:context=".ui.takephoto.ActTakePhoto">
+    tools:context="com.zph.cvideo.ui.clip.ActVideoClip">
 
 
+    <GridView
+        android:id="@+id/act_video_cilp_gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </GridView>
 
 </LinearLayout>
