--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorHome">#DB7093</color>
 
+    <color name="frame_main_bg">#efefef</color>
     <color name="black">#000000</color>
     <color name="lightBlack">#272822</color>
     <color name="lightBlacks">#515151</color>
